--- a/checkpoint3/fetchProject-master/index.html
+++ b/checkpoint3/fetchProject-master/index.html
@@ -2,8 +2,9 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Fetch</title>
+  <title>NASA Astronomy Photo of the Day</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Corben|Noticia+Text|Patrick+Hand|Space+Mono" rel="stylesheet">
 </head>
 <body>
   <div id="fetch"></div>
